--- a/app/src/main/res/layout/eqarthquake_list_item.xml
+++ b/app/src/main/res/layout/eqarthquake_list_item.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="88dp">
 
     <TextView
         android:id="@+id/magnitude_text_view"
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:text="7.2"
         android:padding="@dimen/default_padding"
         android:textAlignment="center"/>
@@ -18,19 +18,31 @@
         android:id="@+id/location_text_view"
         android:layout_width="0dp"
         android:layout_weight="3"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:text="San Francisco"
         android:padding="@dimen/default_padding"
         android:textAlignment="center"/>
 
-
-    <TextView
-        android:id="@+id/time_text_view"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="2"
-        android:layout_height="wrap_content"
-        tools:text="Aug 22, 2018"
-        android:padding="@dimen/default_padding"
-        android:textAlignment="center"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/date_text_view"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dp"
+            tools:text="Aug 22, 2018"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:id="@+id/time_text_view"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dp"
+            tools:text="3:00 PM"
+            android:textAlignment="center"/>
+    </LinearLayout>
 
 </LinearLayout>
