--- a/app/src/main/res/layout/eqarthquake_list_item.xml
+++ b/app/src/main/res/layout/eqarthquake_list_item.xml
@@ -6,7 +6,8 @@
     android:paddingEnd="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingStart="16dp">
+    android:paddingStart="16dp"
+    android:id="@+id/list_item_layout">
 
     <TextView
         android:id="@+id/magnitude_text_view"
